# groot-data-kg-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  FALKORDB_INTEGRATION.md  LICENSE  Makefile  PODMAN_SETUP.md  README.md  demo_falkordb.py  docker-compose.yml  logging.conf  pyproject.toml  test_installation.py
examples/: usage_example.py
prompts/: entity_extraction_prompt.md
scripts/: logs.sh  run-podman.sh  stop-podman.sh  test-mcp.sh
src/ws_memory_mcp/: __init__.py  falkordb_server.py  graph_server.py  memory.py  models.py  neptune.py  neptune_server.py  server.py
