[project]
name = "ws-memory-mcp-server"
version = "0.0.9"
description = "This is an MCP server that provides persistent memory knowledge graph using Amazon Neptune or FalkorDB with semantic vector search capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-aws>=0.2.19",
    "mcp[cli]>=1.6.0",
    "falkordb>=1.0.9",
    "sentence-transformers>=2.2.2",
    "numpy>=1.26.0",
]

[project.scripts]
ws-memory-mcp-server = "ws_memory_mcp.server:main"
graph-memory-mcp-server = "ws_memory_mcp.server:main"

[tool.uv]
package = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106", "D415"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F704"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B104"]  # Skip hardcoded_bind_all_interfaces for Docker usage

[tool.hatch.build.targets.wheel]
packages = ["src/ws_memory_mcp"]
